Fixed language selector clickable are alignment

--- a/navbar.css
+++ b/navbar.css
@@ -201,13 +201,17 @@
   white-space: nowrap;
 }
 
+
 .lang-menu ul li img {
   width: 25px;
   height: 25px;
 }
 
-.lang-menu ul li:hover {
-  background-color: #216694;
+.lang-menu ul li a {
+  padding: 12px 16px;
+  border-radius: 999px;
+  width: 100%;
+  transition: background-color 0.2s ease;
 }
 
 .lang-menu ul li a:before {
@@ -242,6 +246,10 @@
 .selected-lang img {
   width: 24px;
   height: 24px;
+}
+
+.lang-menu ul li a.active {
+  background-color: #5898e0;
 }
 
 [data-i18n] {
